<resources>
    <string name="app_name">Ribbit</string>

    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_send">Send</string>
    <string name="title_activity_login">Login</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_text">SIGN IN</string>
    <string name="signup_link_text">Don\'t have an account? Sign up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Enter your email</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="signup_error_title">Signup Error</string>
    <string name="signup_error_message">Please fill in all required fields</string>
    <string name="login_error_title">login Error</string>
    <string name="login_error_message">Please fill in all required fields</string>
    <string name="menu_logout_label">logout</string>
    <string name="empty_inbox_label">No New Messages</string>
    <string name="empty_friends_label">No Current Friends… :(</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">Oops</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Oops, there was an error</string>
    <string name="video_file_size_warning">The selected video must be less than ten megabytes</string>
    <string name="error_video_file_too_large">The file size is too large</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">RecipientsActivity</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="action_settings">Settings</string>
    <string name="subtitle">A Treehouse Project</string>
    <string name="cancel_button_label">CANCEL</string>
</resources>
