<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.staggarlee.ribbit.Activities.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>


    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/fieldContainer"
        style="@style/AuthFieldContainer">

   <EditText
       android:id="@+id/usernameField"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/username_hint"
       />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        />

    </LinearLayout>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/sign_up_button_label"/>



</RelativeLayout>
