<RelativeLayout style="@style/AuthBackground"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.staggarlee.ribbit.Activities.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"/>


    <TextView
        android:id="@+id/title"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthSubtitle"/>

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

    </LinearLayout>
    
    <Button
        android:id="@+id/loginButton"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:text="@string/login_button_text"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/signup_link_text"
        android:textColor="@android:color/white"/>

</RelativeLayout>
